observability/prometheus/grafana-internal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-internal
  namespace: observability
spec:
  ingressClassName: traefik
  rules:
    - host: grafana-internal.oscargicast.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
